Fixed the text align of some section

--- a/scss/_flowingconversation.scss
+++ b/scss/_flowingconversation.scss
@@ -7,5 +7,6 @@
     &__text {
         margin-inline-start: 7%;
         margin-block-start: 10%;
+        text-align: center;
     }
 }
