--- a/scss/_together.scss
+++ b/scss/_together.scss
@@ -13,6 +13,8 @@
         padding-bottom: 50%;
     }
 
+    
+
 }
 
 .section__together__text {
@@ -20,4 +22,5 @@
     margin-block-start: 5%;
     margin-block-end: 3rem;
     padding: $padding;
+    text-align: center;
 }
