--- a/scss/_user.scss
+++ b/scss/_user.scss
@@ -13,6 +13,7 @@
         margin-inline-start: 7%;
         margin-block-start: 10%;
         padding: $padding;
+        text-align: center;
     }
 
     &__container {
